// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Steps/Marker Animations 1`] = `
<div
  data-css-103e380=""
>
  <div
    className="psds-theme--dark psds-steps__marker psds-steps__marker--large psds-steps__marker--completed psds-steps__marker--hide-counter"
    style={
      Object {
        "height": 36,
        "width": 36,
      }
    }
  >
    <svg
      viewBox="0 0 36 36"
    >
      <circle
        className="psds-steps__marker__circle"
        cx={18}
        cy={18}
        r={17}
        strokeWidth={2}
      />
      <polyline
        className="psds-steps__marker__check psds-steps__marker__check--completed"
        points="
            9.473684210526317 18,
            15.65217391304348 24,
            25.714285714285715 12
          "
        strokeWidth={2}
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots Components/Steps/Marker Completed Large 1`] = `
<div
  data-css-103e380=""
>
  <div
    className="psds-theme--dark psds-steps__marker psds-steps__marker--large psds-steps__marker--completed psds-steps__marker--hide-counter"
    style={
      Object {
        "height": 36,
        "width": 36,
      }
    }
  >
    <svg
      viewBox="0 0 36 36"
    >
      <circle
        className="psds-steps__marker__circle"
        cx={18}
        cy={18}
        r={17}
        strokeWidth={2}
      />
      <polyline
        className="psds-steps__marker__check psds-steps__marker__check--completed"
        points="
            9.473684210526317 18,
            15.65217391304348 24,
            25.714285714285715 12
          "
        strokeWidth={2}
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots Components/Steps/Marker Completed Medium 1`] = `
<div
  data-css-103e380=""
>
  <div
    className="psds-theme--dark psds-steps__marker psds-steps__marker--medium psds-steps__marker--completed psds-steps__marker--hide-counter"
    style={
      Object {
        "height": 24,
        "width": 24,
      }
    }
  >
    <svg
      viewBox="0 0 24 24"
    >
      <circle
        className="psds-steps__marker__circle"
        cx={12}
        cy={12}
        r={11}
        strokeWidth={2}
      />
      <polyline
        className="psds-steps__marker__check psds-steps__marker__check--completed"
        points="
            6.315789473684211 12,
            10.434782608695652 16,
            17.142857142857142 8
          "
        strokeWidth={2}
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots Components/Steps/Marker Current Large 1`] = `
<div
  data-css-103e380=""
>
  <div
    className="psds-theme--dark psds-steps__marker psds-steps__marker--large psds-steps__marker--current psds-steps__marker--hide-counter"
    style={
      Object {
        "height": 36,
        "width": 36,
      }
    }
  >
    <svg
      viewBox="0 0 36 36"
    >
      <circle
        className="psds-steps__marker__circle"
        cx={18}
        cy={18}
        r={17}
        strokeWidth={2}
      />
      <polyline
        className="psds-steps__marker__check psds-steps__marker__check--current"
        points="
            9.473684210526317 18,
            15.65217391304348 24,
            25.714285714285715 12
          "
        strokeWidth={2}
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots Components/Steps/Marker Current Medium 1`] = `
<div
  data-css-103e380=""
>
  <div
    className="psds-theme--dark psds-steps__marker psds-steps__marker--medium psds-steps__marker--current psds-steps__marker--hide-counter"
    style={
      Object {
        "height": 24,
        "width": 24,
      }
    }
  >
    <svg
      viewBox="0 0 24 24"
    >
      <circle
        className="psds-steps__marker__circle"
        cx={12}
        cy={12}
        r={11}
        strokeWidth={2}
      />
      <polyline
        className="psds-steps__marker__check psds-steps__marker__check--current"
        points="
            6.315789473684211 12,
            10.434782608695652 16,
            17.142857142857142 8
          "
        strokeWidth={2}
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots Components/Steps/Marker Incomplete Large 1`] = `
<div
  data-css-103e380=""
>
  <div
    className="psds-theme--dark psds-steps__marker psds-steps__marker--large psds-steps__marker--incomplete psds-steps__marker--hide-counter"
    style={
      Object {
        "height": 36,
        "width": 36,
      }
    }
  >
    <svg
      viewBox="0 0 36 36"
    >
      <circle
        className="psds-steps__marker__circle"
        cx={18}
        cy={18}
        r={17}
        strokeWidth={2}
      />
      <polyline
        className="psds-steps__marker__check psds-steps__marker__check--incomplete"
        points="
            9.473684210526317 18,
            15.65217391304348 24,
            25.714285714285715 12
          "
        strokeWidth={2}
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots Components/Steps/Marker Incomplete Medium 1`] = `
<div
  data-css-103e380=""
>
  <div
    className="psds-theme--dark psds-steps__marker psds-steps__marker--medium psds-steps__marker--incomplete psds-steps__marker--hide-counter"
    style={
      Object {
        "height": 24,
        "width": 24,
      }
    }
  >
    <svg
      viewBox="0 0 24 24"
    >
      <circle
        className="psds-steps__marker__circle"
        cx={12}
        cy={12}
        r={11}
        strokeWidth={2}
      />
      <polyline
        className="psds-steps__marker__check psds-steps__marker__check--incomplete"
        points="
            6.315789473684211 12,
            10.434782608695652 16,
            17.142857142857142 8
          "
        strokeWidth={2}
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots Components/Steps/Step Custom Marker 1`] = `
<div
  data-css-12c8fh6=""
>
  <div
    className="psds-steps__step psds-theme--dark psds-steps__step--vertical psds-steps__step--medium psds-steps__step--completed"
  >
    <div
      className="psds-steps__marker-container psds-steps__marker-container--medium"
    >
      <div
        aria-busy="false"
        aria-label=""
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={100}
        className="psds-circularprogress--size-small"
        role="progressbar"
      >
        <div
          aria-live="polite"
          data-css-6wu9td=""
        >
          complete
        </div>
        <svg
          className="psds-circularprogress__svg"
          version="1.1"
          viewBox="0 0 48 48"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            className="psds-circularprogress__bg psds-theme--dark"
            cx="24"
            cy="24"
            r={22}
          />
          <circle
            className="psds-circularprogress__fg psds-circularprogress__fg psds-theme--dark"
            cx="24"
            cy="24"
            r={22}
            strokeDasharray="138.23007675795088 138.23007675795088"
            strokeDashoffset={0}
          />
        </svg>
      </div>
    </div>
    <div>
      <div
        className="psds-steps__title psds-theme--dark psds-steps__title--medium psds-steps__title--completed"
      >
        <p>
          Grapple case shot
        </p>
      </div>
    </div>
  </div>
  <div
    className="psds-steps__step psds-theme--dark psds-steps__step--vertical psds-steps__step--medium psds-steps__step--current"
  >
    <div
      className="psds-steps__marker-container psds-steps__marker-container--medium"
    >
      <div
        aria-busy="true"
        aria-label=""
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={60}
        className="psds-circularprogress--size-small"
        role="progressbar"
      >
        <div
          aria-live="polite"
          data-css-6wu9td=""
        >
          60%
        </div>
        <svg
          className="psds-circularprogress__svg"
          version="1.1"
          viewBox="0 0 48 48"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            className="psds-circularprogress__bg psds-theme--dark"
            cx="24"
            cy="24"
            r={22}
          />
          <circle
            className="psds-circularprogress__fg psds-circularprogress__fg psds-theme--dark"
            cx="24"
            cy="24"
            r={22}
            strokeDasharray="138.23007675795088 138.23007675795088"
            strokeDashoffset={55.29203070318036}
          />
        </svg>
      </div>
    </div>
    <div>
      <div
        className="psds-steps__title psds-theme--dark psds-steps__title--medium psds-steps__title--current"
      >
        <p>
          Grapple case shot
        </p>
      </div>
    </div>
  </div>
  <div
    className="psds-steps__step psds-theme--dark psds-steps__step--vertical psds-steps__step--medium psds-steps__step--incomplete"
  >
    <div
      className="psds-steps__marker-container psds-steps__marker-container--medium"
    >
      <div
        aria-busy="true"
        aria-label="Loading"
        className="psds-circularprogress--size-small"
        role="progressbar"
      >
        <svg
          className="psds-circularprogress__svg"
          version="1.1"
          viewBox="0 0 48 48"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            className="psds-circularprogress__bg psds-theme--dark"
            cx="24"
            cy="24"
            r={22}
          />
          <circle
            className="psds-circularprogress__fg psds-circularprogress__fg psds-theme--dark"
            cx="24"
            cy="24"
            r={22}
            strokeDasharray="138.23007675795088 138.23007675795088"
            strokeDashoffset={103.67255756846316}
          />
        </svg>
      </div>
    </div>
    <div>
      <div
        className="psds-steps__title psds-theme--dark psds-steps__title--medium psds-steps__title--incomplete"
      >
        <p>
          Grapple case shot
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Steps/Step Hide Counters 1`] = `
<div
  data-css-12c8fh6=""
>
  <div
    className="psds-steps__step psds-theme--dark psds-steps__step--vertical psds-steps__step--medium psds-steps__step--completed"
  >
    <div
      className="psds-steps__marker-container psds-steps__marker-container--medium"
    >
      <div
        className="psds-theme--dark psds-steps__marker psds-steps__marker--medium psds-steps__marker--completed"
        style={
          Object {
            "height": 24,
            "width": 24,
          }
        }
      >
        <svg
          viewBox="0 0 24 24"
        >
          <circle
            className="psds-steps__marker__circle"
            cx={12}
            cy={12}
            r={11}
            strokeWidth={2}
          />
          <polyline
            className="psds-steps__marker__check psds-steps__marker__check--completed"
            points="
            6.315789473684211 12,
            10.434782608695652 16,
            17.142857142857142 8
          "
            strokeWidth={2}
          />
        </svg>
      </div>
    </div>
    <div>
      <div
        className="psds-steps__title psds-theme--dark psds-steps__title--medium psds-steps__title--completed"
      >
        <p>
          Grapple case shot
        </p>
      </div>
    </div>
  </div>
  <div
    className="psds-steps__step psds-theme--dark psds-steps__step--vertical psds-steps__step--medium psds-steps__step--current"
  >
    <div
      className="psds-steps__marker-container psds-steps__marker-container--medium"
    >
      <div
        className="psds-theme--dark psds-steps__marker psds-steps__marker--medium psds-steps__marker--current"
        style={
          Object {
            "height": 24,
            "width": 24,
          }
        }
      >
        <svg
          viewBox="0 0 24 24"
        >
          <circle
            className="psds-steps__marker__circle"
            cx={12}
            cy={12}
            r={11}
            strokeWidth={2}
          />
          <polyline
            className="psds-steps__marker__check psds-steps__marker__check--current"
            points="
            6.315789473684211 12,
            10.434782608695652 16,
            17.142857142857142 8
          "
            strokeWidth={2}
          />
        </svg>
      </div>
    </div>
    <div>
      <div
        className="psds-steps__title psds-theme--dark psds-steps__title--medium psds-steps__title--current"
      >
        <p>
          Grapple case shot
        </p>
      </div>
    </div>
  </div>
  <div
    className="psds-steps__step psds-theme--dark psds-steps__step--vertical psds-steps__step--medium psds-steps__step--incomplete"
  >
    <div
      className="psds-steps__marker-container psds-steps__marker-container--medium"
    >
      <div
        className="psds-theme--dark psds-steps__marker psds-steps__marker--medium psds-steps__marker--incomplete"
        style={
          Object {
            "height": 24,
            "width": 24,
          }
        }
      >
        <svg
          viewBox="0 0 24 24"
        >
          <circle
            className="psds-steps__marker__circle"
            cx={12}
            cy={12}
            r={11}
            strokeWidth={2}
          />
          <polyline
            className="psds-steps__marker__check psds-steps__marker__check--incomplete"
            points="
            6.315789473684211 12,
            10.434782608695652 16,
            17.142857142857142 8
          "
            strokeWidth={2}
          />
        </svg>
      </div>
    </div>
    <div>
      <div
        className="psds-steps__title psds-theme--dark psds-steps__title--medium psds-steps__title--incomplete"
      >
        <p>
          Grapple case shot
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Steps/Step Large 1`] = `
<div
  data-css-12c8fh6=""
>
  <div
    className="psds-steps__step psds-theme--dark psds-steps__step--vertical psds-steps__step--large psds-steps__step--completed"
  >
    <div
      className="psds-steps__marker-container psds-steps__marker-container--large"
    >
      <div
        className="psds-theme--dark psds-steps__marker psds-steps__marker--large psds-steps__marker--completed psds-steps__marker--hide-counter"
        style={
          Object {
            "height": 36,
            "width": 36,
          }
        }
      >
        <svg
          viewBox="0 0 36 36"
        >
          <circle
            className="psds-steps__marker__circle"
            cx={18}
            cy={18}
            r={17}
            strokeWidth={2}
          />
          <polyline
            className="psds-steps__marker__check psds-steps__marker__check--completed"
            points="
            9.473684210526317 18,
            15.65217391304348 24,
            25.714285714285715 12
          "
            strokeWidth={2}
          />
        </svg>
      </div>
    </div>
    <div>
      <div
        className="psds-steps__title psds-theme--dark psds-steps__title--large psds-steps__title--completed"
      >
        <p>
          Grapple case shot
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Steps/Step Large Description 1`] = `
<div
  data-css-12c8fh6=""
>
  <div
    className="psds-steps__step psds-theme--dark psds-steps__step--vertical psds-steps__step--large psds-steps__step--completed"
  >
    <div
      className="psds-steps__marker-container psds-steps__marker-container--large"
    >
      <div
        className="psds-theme--dark psds-steps__marker psds-steps__marker--large psds-steps__marker--completed psds-steps__marker--hide-counter"
        style={
          Object {
            "height": 36,
            "width": 36,
          }
        }
      >
        <svg
          viewBox="0 0 36 36"
        >
          <circle
            className="psds-steps__marker__circle"
            cx={18}
            cy={18}
            r={17}
            strokeWidth={2}
          />
          <polyline
            className="psds-steps__marker__check psds-steps__marker__check--completed"
            points="
            9.473684210526317 18,
            15.65217391304348 24,
            25.714285714285715 12
          "
            strokeWidth={2}
          />
        </svg>
      </div>
    </div>
    <div>
      <div
        className="psds-steps__title psds-theme--dark psds-steps__title--large psds-steps__title--completed"
      >
        <p>
          Fathom belaying pin
        </p>
      </div>
      <div
        className="psds-steps__description psds-steps__description--large psds-steps__description--completed"
      >
        <p>
          Scuttle rigging booty pink six pounders code of conduct mizzen schooner scallywag long clothes.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Steps/Step Large Interactive 1`] = `
<div
  data-css-12c8fh6=""
>
  <div
    className="psds-steps__step psds-theme--dark psds-steps__step--vertical psds-steps__step--large psds-steps__step--completed psds-steps__step--interactive"
    onClick={[Function]}
  >
    <div
      className="psds-steps__marker-container psds-steps__marker-container--large"
    >
      <div
        className="psds-theme--dark psds-steps__marker psds-steps__marker--large psds-steps__marker--completed psds-steps__marker--hide-counter"
        style={
          Object {
            "height": 36,
            "width": 36,
          }
        }
      >
        <svg
          viewBox="0 0 36 36"
        >
          <circle
            className="psds-steps__marker__circle"
            cx={18}
            cy={18}
            r={17}
            strokeWidth={2}
          />
          <polyline
            className="psds-steps__marker__check psds-steps__marker__check--completed"
            points="
            9.473684210526317 18,
            15.65217391304348 24,
            25.714285714285715 12
          "
            strokeWidth={2}
          />
        </svg>
      </div>
    </div>
    <div>
      <div
        className="psds-steps__title psds-theme--dark psds-steps__title--large psds-steps__title--completed"
      >
        <p>
          Gaff knave plunder
        </p>
      </div>
      <div
        className="psds-steps__description psds-steps__description--large psds-steps__description--completed"
      >
        <p>
          Yo-ho-ho hardtack no prey, no pay crack Jennys tea cup draught case shot gally doubloon poop deck reef sails.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Steps/Step Large Long Title 1`] = `
<div
  data-css-12c8fh6=""
>
  <div
    className="psds-steps__step psds-theme--dark psds-steps__step--vertical psds-steps__step--large psds-steps__step--completed"
  >
    <div
      className="psds-steps__marker-container psds-steps__marker-container--large"
    >
      <div
        className="psds-theme--dark psds-steps__marker psds-steps__marker--large psds-steps__marker--completed psds-steps__marker--hide-counter"
        style={
          Object {
            "height": 36,
            "width": 36,
          }
        }
      >
        <svg
          viewBox="0 0 36 36"
        >
          <circle
            className="psds-steps__marker__circle"
            cx={18}
            cy={18}
            r={17}
            strokeWidth={2}
          />
          <polyline
            className="psds-steps__marker__check psds-steps__marker__check--completed"
            points="
            9.473684210526317 18,
            15.65217391304348 24,
            25.714285714285715 12
          "
            strokeWidth={2}
          />
        </svg>
      </div>
    </div>
    <div>
      <div
        className="psds-steps__title psds-theme--dark psds-steps__title--large psds-steps__title--completed"
      >
        <p>
          Hang the jib measured fer yer chains aft list long clothes transom pinnace barque American Main cog.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Steps/Step Medium 1`] = `
<div
  data-css-12c8fh6=""
>
  <div
    className="psds-steps__step psds-theme--dark psds-steps__step--vertical psds-steps__step--medium psds-steps__step--completed"
  >
    <div
      className="psds-steps__marker-container psds-steps__marker-container--medium"
    >
      <div
        className="psds-theme--dark psds-steps__marker psds-steps__marker--medium psds-steps__marker--completed psds-steps__marker--hide-counter"
        style={
          Object {
            "height": 24,
            "width": 24,
          }
        }
      >
        <svg
          viewBox="0 0 24 24"
        >
          <circle
            className="psds-steps__marker__circle"
            cx={12}
            cy={12}
            r={11}
            strokeWidth={2}
          />
          <polyline
            className="psds-steps__marker__check psds-steps__marker__check--completed"
            points="
            6.315789473684211 12,
            10.434782608695652 16,
            17.142857142857142 8
          "
            strokeWidth={2}
          />
        </svg>
      </div>
    </div>
    <div>
      <div
        className="psds-steps__title psds-theme--dark psds-steps__title--medium psds-steps__title--completed"
      >
        <p>
          Grapple case shot
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Steps/Step Medium Description 1`] = `
<div
  data-css-12c8fh6=""
>
  <div
    className="psds-steps__step psds-theme--dark psds-steps__step--vertical psds-steps__step--medium psds-steps__step--completed"
  >
    <div
      className="psds-steps__marker-container psds-steps__marker-container--medium"
    >
      <div
        className="psds-theme--dark psds-steps__marker psds-steps__marker--medium psds-steps__marker--completed psds-steps__marker--hide-counter"
        style={
          Object {
            "height": 24,
            "width": 24,
          }
        }
      >
        <svg
          viewBox="0 0 24 24"
        >
          <circle
            className="psds-steps__marker__circle"
            cx={12}
            cy={12}
            r={11}
            strokeWidth={2}
          />
          <polyline
            className="psds-steps__marker__check psds-steps__marker__check--completed"
            points="
            6.315789473684211 12,
            10.434782608695652 16,
            17.142857142857142 8
          "
            strokeWidth={2}
          />
        </svg>
      </div>
    </div>
    <div>
      <div
        className="psds-steps__title psds-theme--dark psds-steps__title--medium psds-steps__title--completed"
      >
        <p>
          Fathom belaying pin
        </p>
      </div>
      <div
        className="psds-steps__description psds-steps__description--medium psds-steps__description--completed"
      >
        <p>
          Scuttle rigging booty pink six pounders code of conduct mizzen schooner scallywag long clothes.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Steps/Step Medium Interactive 1`] = `
<div
  data-css-12c8fh6=""
>
  <div
    className="psds-steps__step psds-theme--dark psds-steps__step--vertical psds-steps__step--medium psds-steps__step--completed psds-steps__step--interactive"
    onClick={[Function]}
  >
    <div
      className="psds-steps__marker-container psds-steps__marker-container--medium"
    >
      <div
        className="psds-theme--dark psds-steps__marker psds-steps__marker--medium psds-steps__marker--completed psds-steps__marker--hide-counter"
        style={
          Object {
            "height": 24,
            "width": 24,
          }
        }
      >
        <svg
          viewBox="0 0 24 24"
        >
          <circle
            className="psds-steps__marker__circle"
            cx={12}
            cy={12}
            r={11}
            strokeWidth={2}
          />
          <polyline
            className="psds-steps__marker__check psds-steps__marker__check--completed"
            points="
            6.315789473684211 12,
            10.434782608695652 16,
            17.142857142857142 8
          "
            strokeWidth={2}
          />
        </svg>
      </div>
    </div>
    <div>
      <div
        className="psds-steps__title psds-theme--dark psds-steps__title--medium psds-steps__title--completed"
      >
        <p>
          Gaff knave plunder
        </p>
      </div>
      <div
        className="psds-steps__description psds-steps__description--medium psds-steps__description--completed"
      >
        <p>
          Yo-ho-ho hardtack no prey, no pay crack Jennys tea cup draught case shot gally doubloon poop deck reef sails.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Steps/Step Medium Long Title 1`] = `
<div
  data-css-12c8fh6=""
>
  <div
    className="psds-steps__step psds-theme--dark psds-steps__step--vertical psds-steps__step--medium psds-steps__step--completed"
  >
    <div
      className="psds-steps__marker-container psds-steps__marker-container--medium"
    >
      <div
        className="psds-theme--dark psds-steps__marker psds-steps__marker--medium psds-steps__marker--completed psds-steps__marker--hide-counter"
        style={
          Object {
            "height": 24,
            "width": 24,
          }
        }
      >
        <svg
          viewBox="0 0 24 24"
        >
          <circle
            className="psds-steps__marker__circle"
            cx={12}
            cy={12}
            r={11}
            strokeWidth={2}
          />
          <polyline
            className="psds-steps__marker__check psds-steps__marker__check--completed"
            points="
            6.315789473684211 12,
            10.434782608695652 16,
            17.142857142857142 8
          "
            strokeWidth={2}
          />
        </svg>
      </div>
    </div>
    <div>
      <div
        className="psds-steps__title psds-theme--dark psds-steps__title--medium psds-steps__title--completed"
      >
        <p>
          Hang the jib measured fer yer chains aft list long clothes transom pinnace barque American Main cog.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Steps/examples Wizard 1`] = `
<div
  data-css-1wckvg7=""
>
  <div
    className="psds-steps psds-theme--dark psds-steps--horizontal"
  >
    <div
      className="psds-steps__step psds-theme--dark psds-steps__step--horizontal psds-steps__step--large psds-steps__step--current"
    >
      <div
        className="psds-steps__marker-container psds-steps__marker-container--large"
      >
        <div
          className="psds-theme--dark psds-steps__marker psds-steps__marker--large psds-steps__marker--current psds-steps__marker--hide-counter"
          style={
            Object {
              "height": 36,
              "width": 36,
            }
          }
        >
          <svg
            viewBox="0 0 36 36"
          >
            <circle
              className="psds-steps__marker__circle"
              cx={18}
              cy={18}
              r={17}
              strokeWidth={2}
            />
            <polyline
              className="psds-steps__marker__check psds-steps__marker__check--current"
              points="
            9.473684210526317 18,
            15.65217391304348 24,
            25.714285714285715 12
          "
              strokeWidth={2}
            />
          </svg>
        </div>
      </div>
      <div>
        <div
          className="psds-steps__title psds-theme--dark psds-steps__title--large psds-steps__title--current"
        >
          <p>
            First step
          </p>
        </div>
        <div
          className="psds-steps__description psds-steps__description--large psds-steps__description--current"
        >
          <p>
            Prow scuttle parrel provost Sail ho shrouds
          </p>
        </div>
      </div>
    </div>
    <div
      className="psds-steps__step psds-theme--dark psds-steps__step--horizontal psds-steps__step--large psds-steps__step--incomplete"
    >
      <div
        className="psds-steps__marker-container psds-steps__marker-container--large"
      >
        <div
          className="psds-theme--dark psds-steps__marker psds-steps__marker--large psds-steps__marker--incomplete psds-steps__marker--hide-counter"
          style={
            Object {
              "height": 36,
              "width": 36,
            }
          }
        >
          <svg
            viewBox="0 0 36 36"
          >
            <circle
              className="psds-steps__marker__circle"
              cx={18}
              cy={18}
              r={17}
              strokeWidth={2}
            />
            <polyline
              className="psds-steps__marker__check psds-steps__marker__check--incomplete"
              points="
            9.473684210526317 18,
            15.65217391304348 24,
            25.714285714285715 12
          "
              strokeWidth={2}
            />
          </svg>
        </div>
      </div>
      <div>
        <div
          className="psds-steps__title psds-theme--dark psds-steps__title--large psds-steps__title--incomplete"
        >
          <p>
            Second step
          </p>
        </div>
      </div>
    </div>
    <div
      className="psds-steps__step psds-theme--dark psds-steps__step--horizontal psds-steps__step--large psds-steps__step--incomplete"
    >
      <div
        className="psds-steps__marker-container psds-steps__marker-container--large"
      >
        <div
          className="psds-theme--dark psds-steps__marker psds-steps__marker--large psds-steps__marker--incomplete psds-steps__marker--hide-counter"
          style={
            Object {
              "height": 36,
              "width": 36,
            }
          }
        >
          <svg
            viewBox="0 0 36 36"
          >
            <circle
              className="psds-steps__marker__circle"
              cx={18}
              cy={18}
              r={17}
              strokeWidth={2}
            />
            <polyline
              className="psds-steps__marker__check psds-steps__marker__check--incomplete"
              points="
            9.473684210526317 18,
            15.65217391304348 24,
            25.714285714285715 12
          "
              strokeWidth={2}
            />
          </svg>
        </div>
      </div>
      <div>
        <div
          className="psds-steps__title psds-theme--dark psds-steps__title--large psds-steps__title--incomplete"
        >
          <p>
            Third step
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    data-css-o4qfb1=""
  >
    <p
      data-css-1k9fqjs=""
    >
      <button
        disabled={true}
        onClick={[Function]}
      >
        Previous
      </button>
      <span>
         
      </span>
      <button
        disabled={false}
        onClick={[Function]}
      >
        Next
      </button>
    </p>
    <pre>
      [
  {
    "description": "Prow scuttle parrel provost Sail ho shrouds",
    "title": "First step",
    "status": "current"
  },
  {
    "description": "Deadlights jack lad schooner scallywag dance",
    "title": "Second step",
    "status": "incomplete"
  },
  {
    "description": "Trysail Sail ho Corsair red ensign hulk smartly boom",
    "title": "Third step",
    "status": "incomplete"
  }
]
    </pre>
  </div>
</div>
`;

exports[`Storyshots Components/Steps/horizontal Basic 1`] = `
<div
  data-css-1y16c93=""
>
  <div
    className="psds-steps psds-theme--dark psds-steps--horizontal"
  >
    <div
      className="psds-steps__step psds-theme--dark psds-steps__step--horizontal psds-steps__step--large psds-steps__step--completed"
    >
      <div
        className="psds-steps__marker-container psds-steps__marker-container--large"
      >
        <div
          className="psds-theme--dark psds-steps__marker psds-steps__marker--large psds-steps__marker--completed psds-steps__marker--hide-counter"
          style={
            Object {
              "height": 36,
              "width": 36,
            }
          }
        >
          <svg
            viewBox="0 0 36 36"
          >
            <circle
              className="psds-steps__marker__circle"
              cx={18}
              cy={18}
              r={17}
              strokeWidth={2}
            />
            <polyline
              className="psds-steps__marker__check psds-steps__marker__check--completed"
              points="
            9.473684210526317 18,
            15.65217391304348 24,
            25.714285714285715 12
          "
              strokeWidth={2}
            />
          </svg>
        </div>
      </div>
      <div>
        <div
          className="psds-steps__title psds-theme--dark psds-steps__title--large psds-steps__title--completed"
        >
          <p>
            Select type
          </p>
        </div>
      </div>
    </div>
    <div
      className="psds-steps__step psds-theme--dark psds-steps__step--horizontal psds-steps__step--large psds-steps__step--current"
    >
      <div
        className="psds-steps__marker-container psds-steps__marker-container--large"
      >
        <div
          className="psds-theme--dark psds-steps__marker psds-steps__marker--large psds-steps__marker--current psds-steps__marker--hide-counter"
          style={
            Object {
              "height": 36,
              "width": 36,
            }
          }
        >
          <svg
            viewBox="0 0 36 36"
          >
            <circle
              className="psds-steps__marker__circle"
              cx={18}
              cy={18}
              r={17}
              strokeWidth={2}
            />
            <polyline
              className="psds-steps__marker__check psds-steps__marker__check--current"
              points="
            9.473684210526317 18,
            15.65217391304348 24,
            25.714285714285715 12
          "
              strokeWidth={2}
            />
          </svg>
        </div>
      </div>
      <div>
        <div
          className="psds-steps__title psds-theme--dark psds-steps__title--large psds-steps__title--current"
        >
          <p>
            Select template
          </p>
        </div>
        <div
          className="psds-steps__description psds-steps__description--large psds-steps__description--current"
        >
          <p>
            An optional description to provide more detail about this step.
          </p>
        </div>
      </div>
    </div>
    <div
      className="psds-steps__step psds-theme--dark psds-steps__step--horizontal psds-steps__step--large psds-steps__step--incomplete"
    >
      <div
        className="psds-steps__marker-container psds-steps__marker-container--large"
      >
        <div
          className="psds-theme--dark psds-steps__marker psds-steps__marker--large psds-steps__marker--incomplete psds-steps__marker--hide-counter"
          style={
            Object {
              "height": 36,
              "width": 36,
            }
          }
        >
          <svg
            viewBox="0 0 36 36"
          >
            <circle
              className="psds-steps__marker__circle"
              cx={18}
              cy={18}
              r={17}
              strokeWidth={2}
            />
            <polyline
              className="psds-steps__marker__check psds-steps__marker__check--incomplete"
              points="
            9.473684210526317 18,
            15.65217391304348 24,
            25.714285714285715 12
          "
              strokeWidth={2}
            />
          </svg>
        </div>
      </div>
      <div>
        <div
          className="psds-steps__title psds-theme--dark psds-steps__title--large psds-steps__title--incomplete"
        >
          <p>
            Add details
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Steps/horizontal Interactive 1`] = `
<div
  data-css-1y16c93=""
>
  <div
    className="psds-steps psds-theme--dark psds-steps--horizontal"
  >
    <div
      className="psds-steps__step psds-theme--dark psds-steps__step--horizontal psds-steps__step--large psds-steps__step--completed psds-steps__step--interactive"
      onClick={[Function]}
    >
      <div
        className="psds-steps__marker-container psds-steps__marker-container--large"
      >
        <div
          className="psds-theme--dark psds-steps__marker psds-steps__marker--large psds-steps__marker--completed psds-steps__marker--hide-counter"
          style={
            Object {
              "height": 36,
              "width": 36,
            }
          }
        >
          <svg
            viewBox="0 0 36 36"
          >
            <circle
              className="psds-steps__marker__circle"
              cx={18}
              cy={18}
              r={17}
              strokeWidth={2}
            />
            <polyline
              className="psds-steps__marker__check psds-steps__marker__check--completed"
              points="
            9.473684210526317 18,
            15.65217391304348 24,
            25.714285714285715 12
          "
              strokeWidth={2}
            />
          </svg>
        </div>
      </div>
      <div>
        <div
          className="psds-steps__title psds-theme--dark psds-steps__title--large psds-steps__title--completed"
        >
          <p>
            Select type
          </p>
        </div>
      </div>
    </div>
    <div
      className="psds-steps__step psds-theme--dark psds-steps__step--horizontal psds-steps__step--large psds-steps__step--current psds-steps__step--interactive"
      onClick={[Function]}
    >
      <div
        className="psds-steps__marker-container psds-steps__marker-container--large"
      >
        <div
          className="psds-theme--dark psds-steps__marker psds-steps__marker--large psds-steps__marker--current psds-steps__marker--hide-counter"
          style={
            Object {
              "height": 36,
              "width": 36,
            }
          }
        >
          <svg
            viewBox="0 0 36 36"
          >
            <circle
              className="psds-steps__marker__circle"
              cx={18}
              cy={18}
              r={17}
              strokeWidth={2}
            />
            <polyline
              className="psds-steps__marker__check psds-steps__marker__check--current"
              points="
            9.473684210526317 18,
            15.65217391304348 24,
            25.714285714285715 12
          "
              strokeWidth={2}
            />
          </svg>
        </div>
      </div>
      <div>
        <div
          className="psds-steps__title psds-theme--dark psds-steps__title--large psds-steps__title--current"
        >
          <p>
            Select template
          </p>
        </div>
        <div
          className="psds-steps__description psds-steps__description--large psds-steps__description--current"
        >
          <p>
            An optional description to provide more detail about this step.
          </p>
        </div>
      </div>
    </div>
    <div
      className="psds-steps__step psds-theme--dark psds-steps__step--horizontal psds-steps__step--large psds-steps__step--incomplete psds-steps__step--interactive"
      onClick={[Function]}
    >
      <div
        className="psds-steps__marker-container psds-steps__marker-container--large"
      >
        <div
          className="psds-theme--dark psds-steps__marker psds-steps__marker--large psds-steps__marker--incomplete psds-steps__marker--hide-counter"
          style={
            Object {
              "height": 36,
              "width": 36,
            }
          }
        >
          <svg
            viewBox="0 0 36 36"
          >
            <circle
              className="psds-steps__marker__circle"
              cx={18}
              cy={18}
              r={17}
              strokeWidth={2}
            />
            <polyline
              className="psds-steps__marker__check psds-steps__marker__check--incomplete"
              points="
            9.473684210526317 18,
            15.65217391304348 24,
            25.714285714285715 12
          "
              strokeWidth={2}
            />
          </svg>
        </div>
      </div>
      <div>
        <div
          className="psds-steps__title psds-theme--dark psds-steps__title--large psds-steps__title--incomplete"
        >
          <p>
            Add details
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Steps/horizontal Medium 1`] = `
<div
  data-css-1y16c93=""
>
  <div
    className="psds-steps psds-theme--dark psds-steps--horizontal"
  >
    <div
      className="psds-steps__step psds-theme--dark psds-steps__step--horizontal psds-steps__step--medium psds-steps__step--completed"
    >
      <div
        className="psds-steps__marker-container psds-steps__marker-container--medium"
      >
        <div
          className="psds-theme--dark psds-steps__marker psds-steps__marker--medium psds-steps__marker--completed psds-steps__marker--hide-counter"
          style={
            Object {
              "height": 24,
              "width": 24,
            }
          }
        >
          <svg
            viewBox="0 0 24 24"
          >
            <circle
              className="psds-steps__marker__circle"
              cx={12}
              cy={12}
              r={11}
              strokeWidth={2}
            />
            <polyline
              className="psds-steps__marker__check psds-steps__marker__check--completed"
              points="
            6.315789473684211 12,
            10.434782608695652 16,
            17.142857142857142 8
          "
              strokeWidth={2}
            />
          </svg>
        </div>
      </div>
      <div>
        <div
          className="psds-steps__title psds-theme--dark psds-steps__title--medium psds-steps__title--completed"
        >
          <p>
            Select type
          </p>
        </div>
      </div>
    </div>
    <div
      className="psds-steps__step psds-theme--dark psds-steps__step--horizontal psds-steps__step--medium psds-steps__step--current"
    >
      <div
        className="psds-steps__marker-container psds-steps__marker-container--medium"
      >
        <div
          className="psds-theme--dark psds-steps__marker psds-steps__marker--medium psds-steps__marker--current psds-steps__marker--hide-counter"
          style={
            Object {
              "height": 24,
              "width": 24,
            }
          }
        >
          <svg
            viewBox="0 0 24 24"
          >
            <circle
              className="psds-steps__marker__circle"
              cx={12}
              cy={12}
              r={11}
              strokeWidth={2}
            />
            <polyline
              className="psds-steps__marker__check psds-steps__marker__check--current"
              points="
            6.315789473684211 12,
            10.434782608695652 16,
            17.142857142857142 8
          "
              strokeWidth={2}
            />
          </svg>
        </div>
      </div>
      <div>
        <div
          className="psds-steps__title psds-theme--dark psds-steps__title--medium psds-steps__title--current"
        >
          <p>
            Select template
          </p>
        </div>
        <div
          className="psds-steps__description psds-steps__description--medium psds-steps__description--current"
        >
          <p>
            An optional description to provide more detail about this step.
          </p>
        </div>
      </div>
    </div>
    <div
      className="psds-steps__step psds-theme--dark psds-steps__step--horizontal psds-steps__step--medium psds-steps__step--incomplete"
    >
      <div
        className="psds-steps__marker-container psds-steps__marker-container--medium"
      >
        <div
          className="psds-theme--dark psds-steps__marker psds-steps__marker--medium psds-steps__marker--incomplete psds-steps__marker--hide-counter"
          style={
            Object {
              "height": 24,
              "width": 24,
            }
          }
        >
          <svg
            viewBox="0 0 24 24"
          >
            <circle
              className="psds-steps__marker__circle"
              cx={12}
              cy={12}
              r={11}
              strokeWidth={2}
            />
            <polyline
              className="psds-steps__marker__check psds-steps__marker__check--incomplete"
              points="
            6.315789473684211 12,
            10.434782608695652 16,
            17.142857142857142 8
          "
              strokeWidth={2}
            />
          </svg>
        </div>
      </div>
      <div>
        <div
          className="psds-steps__title psds-theme--dark psds-steps__title--medium psds-steps__title--incomplete"
        >
          <p>
            Add details
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Steps/horizontal Responsive 1`] = `
<div
  data-css-1y16c93=""
>
  <div
    className="psds-steps psds-theme--dark psds-steps--vertical"
  >
    <div
      className="psds-steps__step psds-theme--dark psds-steps__step--vertical psds-steps__step--medium psds-steps__step--completed"
    >
      <div
        className="psds-steps__marker-container psds-steps__marker-container--medium"
      >
        <div
          className="psds-theme--dark psds-steps__marker psds-steps__marker--medium psds-steps__marker--completed psds-steps__marker--hide-counter"
          style={
            Object {
              "height": 24,
              "width": 24,
            }
          }
        >
          <svg
            viewBox="0 0 24 24"
          >
            <circle
              className="psds-steps__marker__circle"
              cx={12}
              cy={12}
              r={11}
              strokeWidth={2}
            />
            <polyline
              className="psds-steps__marker__check psds-steps__marker__check--completed"
              points="
            6.315789473684211 12,
            10.434782608695652 16,
            17.142857142857142 8
          "
              strokeWidth={2}
            />
          </svg>
        </div>
      </div>
      <div>
        <div
          className="psds-steps__title psds-theme--dark psds-steps__title--medium psds-steps__title--completed"
        >
          <p>
            Select type
          </p>
        </div>
      </div>
    </div>
    <div
      className="psds-steps__step psds-theme--dark psds-steps__step--vertical psds-steps__step--medium psds-steps__step--current"
    >
      <div
        className="psds-steps__marker-container psds-steps__marker-container--medium"
      >
        <div
          className="psds-theme--dark psds-steps__marker psds-steps__marker--medium psds-steps__marker--current psds-steps__marker--hide-counter"
          style={
            Object {
              "height": 24,
              "width": 24,
            }
          }
        >
          <svg
            viewBox="0 0 24 24"
          >
            <circle
              className="psds-steps__marker__circle"
              cx={12}
              cy={12}
              r={11}
              strokeWidth={2}
            />
            <polyline
              className="psds-steps__marker__check psds-steps__marker__check--current"
              points="
            6.315789473684211 12,
            10.434782608695652 16,
            17.142857142857142 8
          "
              strokeWidth={2}
            />
          </svg>
        </div>
      </div>
      <div>
        <div
          className="psds-steps__title psds-theme--dark psds-steps__title--medium psds-steps__title--current"
        >
          <p>
            Select template
          </p>
        </div>
        <div
          className="psds-steps__description psds-steps__description--medium psds-steps__description--current"
        >
          <p>
            An optional description to provide more detail about this step.
          </p>
        </div>
      </div>
    </div>
    <div
      className="psds-steps__step psds-theme--dark psds-steps__step--vertical psds-steps__step--medium psds-steps__step--incomplete"
    >
      <div
        className="psds-steps__marker-container psds-steps__marker-container--medium"
      >
        <div
          className="psds-theme--dark psds-steps__marker psds-steps__marker--medium psds-steps__marker--incomplete psds-steps__marker--hide-counter"
          style={
            Object {
              "height": 24,
              "width": 24,
            }
          }
        >
          <svg
            viewBox="0 0 24 24"
          >
            <circle
              className="psds-steps__marker__circle"
              cx={12}
              cy={12}
              r={11}
              strokeWidth={2}
            />
            <polyline
              className="psds-steps__marker__check psds-steps__marker__check--incomplete"
              points="
            6.315789473684211 12,
            10.434782608695652 16,
            17.142857142857142 8
          "
              strokeWidth={2}
            />
          </svg>
        </div>
      </div>
      <div>
        <div
          className="psds-steps__title psds-theme--dark psds-steps__title--medium psds-steps__title--incomplete"
        >
          <p>
            Add details
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Steps/vertical Basic 1`] = `
<div
  className="psds-steps psds-theme--dark psds-steps--vertical"
>
  <div
    className="psds-steps__step psds-theme--dark psds-steps__step--vertical psds-steps__step--large psds-steps__step--completed"
  >
    <div
      className="psds-steps__marker-container psds-steps__marker-container--large"
    >
      <div
        className="psds-theme--dark psds-steps__marker psds-steps__marker--large psds-steps__marker--completed psds-steps__marker--hide-counter"
        style={
          Object {
            "height": 36,
            "width": 36,
          }
        }
      >
        <svg
          viewBox="0 0 36 36"
        >
          <circle
            className="psds-steps__marker__circle"
            cx={18}
            cy={18}
            r={17}
            strokeWidth={2}
          />
          <polyline
            className="psds-steps__marker__check psds-steps__marker__check--completed"
            points="
            9.473684210526317 18,
            15.65217391304348 24,
            25.714285714285715 12
          "
            strokeWidth={2}
          />
        </svg>
      </div>
    </div>
    <div>
      <div
        className="psds-steps__title psds-theme--dark psds-steps__title--large psds-steps__title--completed"
      >
        <p>
          Select type
        </p>
      </div>
    </div>
  </div>
  <div
    className="psds-steps__step psds-theme--dark psds-steps__step--vertical psds-steps__step--large psds-steps__step--current"
  >
    <div
      className="psds-steps__marker-container psds-steps__marker-container--large"
    >
      <div
        className="psds-theme--dark psds-steps__marker psds-steps__marker--large psds-steps__marker--current psds-steps__marker--hide-counter"
        style={
          Object {
            "height": 36,
            "width": 36,
          }
        }
      >
        <svg
          viewBox="0 0 36 36"
        >
          <circle
            className="psds-steps__marker__circle"
            cx={18}
            cy={18}
            r={17}
            strokeWidth={2}
          />
          <polyline
            className="psds-steps__marker__check psds-steps__marker__check--current"
            points="
            9.473684210526317 18,
            15.65217391304348 24,
            25.714285714285715 12
          "
            strokeWidth={2}
          />
        </svg>
      </div>
    </div>
    <div>
      <div
        className="psds-steps__title psds-theme--dark psds-steps__title--large psds-steps__title--current"
      >
        <p>
          Select template
        </p>
      </div>
      <div
        className="psds-steps__description psds-steps__description--large psds-steps__description--current"
      >
        <p>
          An optional description to provide more detail about this step.
        </p>
      </div>
    </div>
  </div>
  <div
    className="psds-steps__step psds-theme--dark psds-steps__step--vertical psds-steps__step--large psds-steps__step--incomplete"
  >
    <div
      className="psds-steps__marker-container psds-steps__marker-container--large"
    >
      <div
        className="psds-theme--dark psds-steps__marker psds-steps__marker--large psds-steps__marker--incomplete psds-steps__marker--hide-counter"
        style={
          Object {
            "height": 36,
            "width": 36,
          }
        }
      >
        <svg
          viewBox="0 0 36 36"
        >
          <circle
            className="psds-steps__marker__circle"
            cx={18}
            cy={18}
            r={17}
            strokeWidth={2}
          />
          <polyline
            className="psds-steps__marker__check psds-steps__marker__check--incomplete"
            points="
            9.473684210526317 18,
            15.65217391304348 24,
            25.714285714285715 12
          "
            strokeWidth={2}
          />
        </svg>
      </div>
    </div>
    <div>
      <div
        className="psds-steps__title psds-theme--dark psds-steps__title--large psds-steps__title--incomplete"
      >
        <p>
          Add details
        </p>
      </div>
    </div>
  </div>
  <div
    className="psds-steps__step psds-theme--dark psds-steps__step--vertical psds-steps__step--large psds-steps__step--incomplete"
  >
    <div
      className="psds-steps__marker-container psds-steps__marker-container--large"
    >
      <div
        className="psds-theme--dark psds-steps__marker psds-steps__marker--large psds-steps__marker--incomplete psds-steps__marker--hide-counter"
        style={
          Object {
            "height": 36,
            "width": 36,
          }
        }
      >
        <svg
          viewBox="0 0 36 36"
        >
          <circle
            className="psds-steps__marker__circle"
            cx={18}
            cy={18}
            r={17}
            strokeWidth={2}
          />
          <polyline
            className="psds-steps__marker__check psds-steps__marker__check--incomplete"
            points="
            9.473684210526317 18,
            15.65217391304348 24,
            25.714285714285715 12
          "
            strokeWidth={2}
          />
        </svg>
      </div>
    </div>
    <div>
      <div
        className="psds-steps__title psds-theme--dark psds-steps__title--large psds-steps__title--incomplete"
      >
        <p>
          Select goals
        </p>
      </div>
    </div>
  </div>
  <div
    className="psds-steps__step psds-theme--dark psds-steps__step--vertical psds-steps__step--large psds-steps__step--incomplete"
  >
    <div
      className="psds-steps__marker-container psds-steps__marker-container--large"
    >
      <div
        className="psds-theme--dark psds-steps__marker psds-steps__marker--large psds-steps__marker--incomplete psds-steps__marker--hide-counter"
        style={
          Object {
            "height": 36,
            "width": 36,
          }
        }
      >
        <svg
          viewBox="0 0 36 36"
        >
          <circle
            className="psds-steps__marker__circle"
            cx={18}
            cy={18}
            r={17}
            strokeWidth={2}
          />
          <polyline
            className="psds-steps__marker__check psds-steps__marker__check--incomplete"
            points="
            9.473684210526317 18,
            15.65217391304348 24,
            25.714285714285715 12
          "
            strokeWidth={2}
          />
        </svg>
      </div>
    </div>
    <div>
      <div
        className="psds-steps__title psds-theme--dark psds-steps__title--large psds-steps__title--incomplete"
      >
        <p>
          Review
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Steps/vertical In Fixed Container 1`] = `
<div
  data-css-12c8fh6=""
>
  <div
    className="psds-steps psds-theme--dark psds-steps--vertical"
  >
    <div
      className="psds-steps__step psds-theme--dark psds-steps__step--vertical psds-steps__step--large psds-steps__step--completed psds-steps__step--interactive"
      onClick={[Function]}
    >
      <div
        className="psds-steps__marker-container psds-steps__marker-container--large"
      >
        <div
          className="psds-theme--dark psds-steps__marker psds-steps__marker--large psds-steps__marker--completed psds-steps__marker--hide-counter"
          style={
            Object {
              "height": 36,
              "width": 36,
            }
          }
        >
          <svg
            viewBox="0 0 36 36"
          >
            <circle
              className="psds-steps__marker__circle"
              cx={18}
              cy={18}
              r={17}
              strokeWidth={2}
            />
            <polyline
              className="psds-steps__marker__check psds-steps__marker__check--completed"
              points="
            9.473684210526317 18,
            15.65217391304348 24,
            25.714285714285715 12
          "
              strokeWidth={2}
            />
          </svg>
        </div>
      </div>
      <div>
        <div
          className="psds-steps__title psds-theme--dark psds-steps__title--large psds-steps__title--completed"
        >
          <p>
            Select type
          </p>
        </div>
      </div>
    </div>
    <div
      className="psds-steps__step psds-theme--dark psds-steps__step--vertical psds-steps__step--large psds-steps__step--current psds-steps__step--interactive"
      onClick={[Function]}
    >
      <div
        className="psds-steps__marker-container psds-steps__marker-container--large"
      >
        <div
          className="psds-theme--dark psds-steps__marker psds-steps__marker--large psds-steps__marker--current psds-steps__marker--hide-counter"
          style={
            Object {
              "height": 36,
              "width": 36,
            }
          }
        >
          <svg
            viewBox="0 0 36 36"
          >
            <circle
              className="psds-steps__marker__circle"
              cx={18}
              cy={18}
              r={17}
              strokeWidth={2}
            />
            <polyline
              className="psds-steps__marker__check psds-steps__marker__check--current"
              points="
            9.473684210526317 18,
            15.65217391304348 24,
            25.714285714285715 12
          "
              strokeWidth={2}
            />
          </svg>
        </div>
      </div>
      <div>
        <div
          className="psds-steps__title psds-theme--dark psds-steps__title--large psds-steps__title--current"
        >
          <p>
            Select template
          </p>
        </div>
        <div
          className="psds-steps__description psds-steps__description--large psds-steps__description--current"
        >
          <p>
            An optional description to provide more detail about this step.
          </p>
        </div>
      </div>
    </div>
    <div
      className="psds-steps__step psds-theme--dark psds-steps__step--vertical psds-steps__step--large psds-steps__step--incomplete psds-steps__step--interactive"
      onClick={[Function]}
    >
      <div
        className="psds-steps__marker-container psds-steps__marker-container--large"
      >
        <div
          className="psds-theme--dark psds-steps__marker psds-steps__marker--large psds-steps__marker--incomplete psds-steps__marker--hide-counter"
          style={
            Object {
              "height": 36,
              "width": 36,
            }
          }
        >
          <svg
            viewBox="0 0 36 36"
          >
            <circle
              className="psds-steps__marker__circle"
              cx={18}
              cy={18}
              r={17}
              strokeWidth={2}
            />
            <polyline
              className="psds-steps__marker__check psds-steps__marker__check--incomplete"
              points="
            9.473684210526317 18,
            15.65217391304348 24,
            25.714285714285715 12
          "
              strokeWidth={2}
            />
          </svg>
        </div>
      </div>
      <div>
        <div
          className="psds-steps__title psds-theme--dark psds-steps__title--large psds-steps__title--incomplete"
        >
          <p>
            Add details
          </p>
        </div>
      </div>
    </div>
    <div
      className="psds-steps__step psds-theme--dark psds-steps__step--vertical psds-steps__step--large psds-steps__step--incomplete psds-steps__step--interactive"
      onClick={[Function]}
    >
      <div
        className="psds-steps__marker-container psds-steps__marker-container--large"
      >
        <div
          className="psds-theme--dark psds-steps__marker psds-steps__marker--large psds-steps__marker--incomplete psds-steps__marker--hide-counter"
          style={
            Object {
              "height": 36,
              "width": 36,
            }
          }
        >
          <svg
            viewBox="0 0 36 36"
          >
            <circle
              className="psds-steps__marker__circle"
              cx={18}
              cy={18}
              r={17}
              strokeWidth={2}
            />
            <polyline
              className="psds-steps__marker__check psds-steps__marker__check--incomplete"
              points="
            9.473684210526317 18,
            15.65217391304348 24,
            25.714285714285715 12
          "
              strokeWidth={2}
            />
          </svg>
        </div>
      </div>
      <div>
        <div
          className="psds-steps__title psds-theme--dark psds-steps__title--large psds-steps__title--incomplete"
        >
          <p>
            Select goals
          </p>
        </div>
      </div>
    </div>
    <div
      className="psds-steps__step psds-theme--dark psds-steps__step--vertical psds-steps__step--large psds-steps__step--incomplete psds-steps__step--interactive"
      onClick={[Function]}
    >
      <div
        className="psds-steps__marker-container psds-steps__marker-container--large"
      >
        <div
          className="psds-theme--dark psds-steps__marker psds-steps__marker--large psds-steps__marker--incomplete psds-steps__marker--hide-counter"
          style={
            Object {
              "height": 36,
              "width": 36,
            }
          }
        >
          <svg
            viewBox="0 0 36 36"
          >
            <circle
              className="psds-steps__marker__circle"
              cx={18}
              cy={18}
              r={17}
              strokeWidth={2}
            />
            <polyline
              className="psds-steps__marker__check psds-steps__marker__check--incomplete"
              points="
            9.473684210526317 18,
            15.65217391304348 24,
            25.714285714285715 12
          "
              strokeWidth={2}
            />
          </svg>
        </div>
      </div>
      <div>
        <div
          className="psds-steps__title psds-theme--dark psds-steps__title--large psds-steps__title--incomplete"
        >
          <p>
            Review
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Steps/vertical Interactive 1`] = `
<div
  className="psds-steps psds-theme--dark psds-steps--vertical"
>
  <div
    className="psds-steps__step psds-theme--dark psds-steps__step--vertical psds-steps__step--large psds-steps__step--completed psds-steps__step--interactive"
    onClick={[Function]}
  >
    <div
      className="psds-steps__marker-container psds-steps__marker-container--large"
    >
      <div
        className="psds-theme--dark psds-steps__marker psds-steps__marker--large psds-steps__marker--completed psds-steps__marker--hide-counter"
        style={
          Object {
            "height": 36,
            "width": 36,
          }
        }
      >
        <svg
          viewBox="0 0 36 36"
        >
          <circle
            className="psds-steps__marker__circle"
            cx={18}
            cy={18}
            r={17}
            strokeWidth={2}
          />
          <polyline
            className="psds-steps__marker__check psds-steps__marker__check--completed"
            points="
            9.473684210526317 18,
            15.65217391304348 24,
            25.714285714285715 12
          "
            strokeWidth={2}
          />
        </svg>
      </div>
    </div>
    <div>
      <div
        className="psds-steps__title psds-theme--dark psds-steps__title--large psds-steps__title--completed"
      >
        <p>
          Select type
        </p>
      </div>
    </div>
  </div>
  <div
    className="psds-steps__step psds-theme--dark psds-steps__step--vertical psds-steps__step--large psds-steps__step--current psds-steps__step--interactive"
    onClick={[Function]}
  >
    <div
      className="psds-steps__marker-container psds-steps__marker-container--large"
    >
      <div
        className="psds-theme--dark psds-steps__marker psds-steps__marker--large psds-steps__marker--current psds-steps__marker--hide-counter"
        style={
          Object {
            "height": 36,
            "width": 36,
          }
        }
      >
        <svg
          viewBox="0 0 36 36"
        >
          <circle
            className="psds-steps__marker__circle"
            cx={18}
            cy={18}
            r={17}
            strokeWidth={2}
          />
          <polyline
            className="psds-steps__marker__check psds-steps__marker__check--current"
            points="
            9.473684210526317 18,
            15.65217391304348 24,
            25.714285714285715 12
          "
            strokeWidth={2}
          />
        </svg>
      </div>
    </div>
    <div>
      <div
        className="psds-steps__title psds-theme--dark psds-steps__title--large psds-steps__title--current"
      >
        <p>
          Select template
        </p>
      </div>
      <div
        className="psds-steps__description psds-steps__description--large psds-steps__description--current"
      >
        <p>
          An optional description to provide more detail about this step.
        </p>
      </div>
    </div>
  </div>
  <div
    className="psds-steps__step psds-theme--dark psds-steps__step--vertical psds-steps__step--large psds-steps__step--incomplete psds-steps__step--interactive"
    onClick={[Function]}
  >
    <div
      className="psds-steps__marker-container psds-steps__marker-container--large"
    >
      <div
        className="psds-theme--dark psds-steps__marker psds-steps__marker--large psds-steps__marker--incomplete psds-steps__marker--hide-counter"
        style={
          Object {
            "height": 36,
            "width": 36,
          }
        }
      >
        <svg
          viewBox="0 0 36 36"
        >
          <circle
            className="psds-steps__marker__circle"
            cx={18}
            cy={18}
            r={17}
            strokeWidth={2}
          />
          <polyline
            className="psds-steps__marker__check psds-steps__marker__check--incomplete"
            points="
            9.473684210526317 18,
            15.65217391304348 24,
            25.714285714285715 12
          "
            strokeWidth={2}
          />
        </svg>
      </div>
    </div>
    <div>
      <div
        className="psds-steps__title psds-theme--dark psds-steps__title--large psds-steps__title--incomplete"
      >
        <p>
          Add details
        </p>
      </div>
    </div>
  </div>
  <div
    className="psds-steps__step psds-theme--dark psds-steps__step--vertical psds-steps__step--large psds-steps__step--incomplete psds-steps__step--interactive"
    onClick={[Function]}
  >
    <div
      className="psds-steps__marker-container psds-steps__marker-container--large"
    >
      <div
        className="psds-theme--dark psds-steps__marker psds-steps__marker--large psds-steps__marker--incomplete psds-steps__marker--hide-counter"
        style={
          Object {
            "height": 36,
            "width": 36,
          }
        }
      >
        <svg
          viewBox="0 0 36 36"
        >
          <circle
            className="psds-steps__marker__circle"
            cx={18}
            cy={18}
            r={17}
            strokeWidth={2}
          />
          <polyline
            className="psds-steps__marker__check psds-steps__marker__check--incomplete"
            points="
            9.473684210526317 18,
            15.65217391304348 24,
            25.714285714285715 12
          "
            strokeWidth={2}
          />
        </svg>
      </div>
    </div>
    <div>
      <div
        className="psds-steps__title psds-theme--dark psds-steps__title--large psds-steps__title--incomplete"
      >
        <p>
          Select goals
        </p>
      </div>
    </div>
  </div>
  <div
    className="psds-steps__step psds-theme--dark psds-steps__step--vertical psds-steps__step--large psds-steps__step--incomplete psds-steps__step--interactive"
    onClick={[Function]}
  >
    <div
      className="psds-steps__marker-container psds-steps__marker-container--large"
    >
      <div
        className="psds-theme--dark psds-steps__marker psds-steps__marker--large psds-steps__marker--incomplete psds-steps__marker--hide-counter"
        style={
          Object {
            "height": 36,
            "width": 36,
          }
        }
      >
        <svg
          viewBox="0 0 36 36"
        >
          <circle
            className="psds-steps__marker__circle"
            cx={18}
            cy={18}
            r={17}
            strokeWidth={2}
          />
          <polyline
            className="psds-steps__marker__check psds-steps__marker__check--incomplete"
            points="
            9.473684210526317 18,
            15.65217391304348 24,
            25.714285714285715 12
          "
            strokeWidth={2}
          />
        </svg>
      </div>
    </div>
    <div>
      <div
        className="psds-steps__title psds-theme--dark psds-steps__title--large psds-steps__title--incomplete"
      >
        <p>
          Review
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Steps/vertical Medium 1`] = `
<div
  className="psds-steps psds-theme--dark psds-steps--vertical"
>
  <div
    className="psds-steps__step psds-theme--dark psds-steps__step--vertical psds-steps__step--medium psds-steps__step--completed"
  >
    <div
      className="psds-steps__marker-container psds-steps__marker-container--medium"
    >
      <div
        className="psds-theme--dark psds-steps__marker psds-steps__marker--medium psds-steps__marker--completed psds-steps__marker--hide-counter"
        style={
          Object {
            "height": 24,
            "width": 24,
          }
        }
      >
        <svg
          viewBox="0 0 24 24"
        >
          <circle
            className="psds-steps__marker__circle"
            cx={12}
            cy={12}
            r={11}
            strokeWidth={2}
          />
          <polyline
            className="psds-steps__marker__check psds-steps__marker__check--completed"
            points="
            6.315789473684211 12,
            10.434782608695652 16,
            17.142857142857142 8
          "
            strokeWidth={2}
          />
        </svg>
      </div>
    </div>
    <div>
      <div
        className="psds-steps__title psds-theme--dark psds-steps__title--medium psds-steps__title--completed"
      >
        <p>
          Select type
        </p>
      </div>
    </div>
  </div>
  <div
    className="psds-steps__step psds-theme--dark psds-steps__step--vertical psds-steps__step--medium psds-steps__step--current"
  >
    <div
      className="psds-steps__marker-container psds-steps__marker-container--medium"
    >
      <div
        className="psds-theme--dark psds-steps__marker psds-steps__marker--medium psds-steps__marker--current psds-steps__marker--hide-counter"
        style={
          Object {
            "height": 24,
            "width": 24,
          }
        }
      >
        <svg
          viewBox="0 0 24 24"
        >
          <circle
            className="psds-steps__marker__circle"
            cx={12}
            cy={12}
            r={11}
            strokeWidth={2}
          />
          <polyline
            className="psds-steps__marker__check psds-steps__marker__check--current"
            points="
            6.315789473684211 12,
            10.434782608695652 16,
            17.142857142857142 8
          "
            strokeWidth={2}
          />
        </svg>
      </div>
    </div>
    <div>
      <div
        className="psds-steps__title psds-theme--dark psds-steps__title--medium psds-steps__title--current"
      >
        <p>
          Select template
        </p>
      </div>
      <div
        className="psds-steps__description psds-steps__description--medium psds-steps__description--current"
      >
        <p>
          An optional description to provide more detail about this step.
        </p>
      </div>
    </div>
  </div>
  <div
    className="psds-steps__step psds-theme--dark psds-steps__step--vertical psds-steps__step--medium psds-steps__step--incomplete"
  >
    <div
      className="psds-steps__marker-container psds-steps__marker-container--medium"
    >
      <div
        className="psds-theme--dark psds-steps__marker psds-steps__marker--medium psds-steps__marker--incomplete psds-steps__marker--hide-counter"
        style={
          Object {
            "height": 24,
            "width": 24,
          }
        }
      >
        <svg
          viewBox="0 0 24 24"
        >
          <circle
            className="psds-steps__marker__circle"
            cx={12}
            cy={12}
            r={11}
            strokeWidth={2}
          />
          <polyline
            className="psds-steps__marker__check psds-steps__marker__check--incomplete"
            points="
            6.315789473684211 12,
            10.434782608695652 16,
            17.142857142857142 8
          "
            strokeWidth={2}
          />
        </svg>
      </div>
    </div>
    <div>
      <div
        className="psds-steps__title psds-theme--dark psds-steps__title--medium psds-steps__title--incomplete"
      >
        <p>
          Add details
        </p>
      </div>
    </div>
  </div>
  <div
    className="psds-steps__step psds-theme--dark psds-steps__step--vertical psds-steps__step--medium psds-steps__step--incomplete"
  >
    <div
      className="psds-steps__marker-container psds-steps__marker-container--medium"
    >
      <div
        className="psds-theme--dark psds-steps__marker psds-steps__marker--medium psds-steps__marker--incomplete psds-steps__marker--hide-counter"
        style={
          Object {
            "height": 24,
            "width": 24,
          }
        }
      >
        <svg
          viewBox="0 0 24 24"
        >
          <circle
            className="psds-steps__marker__circle"
            cx={12}
            cy={12}
            r={11}
            strokeWidth={2}
          />
          <polyline
            className="psds-steps__marker__check psds-steps__marker__check--incomplete"
            points="
            6.315789473684211 12,
            10.434782608695652 16,
            17.142857142857142 8
          "
            strokeWidth={2}
          />
        </svg>
      </div>
    </div>
    <div>
      <div
        className="psds-steps__title psds-theme--dark psds-steps__title--medium psds-steps__title--incomplete"
      >
        <p>
          Select goals
        </p>
      </div>
    </div>
  </div>
  <div
    className="psds-steps__step psds-theme--dark psds-steps__step--vertical psds-steps__step--medium psds-steps__step--incomplete"
  >
    <div
      className="psds-steps__marker-container psds-steps__marker-container--medium"
    >
      <div
        className="psds-theme--dark psds-steps__marker psds-steps__marker--medium psds-steps__marker--incomplete psds-steps__marker--hide-counter"
        style={
          Object {
            "height": 24,
            "width": 24,
          }
        }
      >
        <svg
          viewBox="0 0 24 24"
        >
          <circle
            className="psds-steps__marker__circle"
            cx={12}
            cy={12}
            r={11}
            strokeWidth={2}
          />
          <polyline
            className="psds-steps__marker__check psds-steps__marker__check--incomplete"
            points="
            6.315789473684211 12,
            10.434782608695652 16,
            17.142857142857142 8
          "
            strokeWidth={2}
          />
        </svg>
      </div>
    </div>
    <div>
      <div
        className="psds-steps__title psds-theme--dark psds-steps__title--medium psds-steps__title--incomplete"
      >
        <p>
          Review
        </p>
      </div>
    </div>
  </div>
</div>
`;
